[package]
name = "knodis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
clap = { version = "4.3.19", features = ["derive"] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio"] }
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.tokio]
version = "1.29.1"
features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "time"
]
